# nexusai

./: .env  .env.example  README.md  docker-compose.yml
backend/: main.py  pyproject.toml
backend/app/core/: config.py  database.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
server/: .gitignore  Dockerfile  main.py  requirements.txt
server/src/: app.py
